debug html issues, add alignment to sections in mobile view for index page

--- a/style/stylesheet.scss
+++ b/style/stylesheet.scss
@@ -1,6 +1,6 @@
 $blue-gray: #272a31;
 $cocogoose: "Cocogoose",
-  sans-serif;
+sans-serif;
 $red: #ec5242;
 
 @font-face {
@@ -49,7 +49,7 @@ a:hover {
     margin-right: 20px;
   }
 
-  .left-side > a {
+  .left-side>a {
     color: white;
   }
 
@@ -70,7 +70,7 @@ a:hover {
       font-size: 22px;
     }
 
-    .features > div {
+    .features>div {
       background-color: rgba(65, 68, 75, 0.6);
       border: 2px solid #272a31 !important;
 
@@ -106,8 +106,16 @@ a:hover {
   }
 }
 
+.ticket-box {
+  margin-top: 50px;
+}
+
 @media screen and (min-width: 992px) {
   .bg-lg-dark {
     background-color: black;
+  }
+
+  .width-50 {
+    width: 50%;
   }
 }
